force-app/main/default/objects/ContentVersion/fields/Document_Requested__c.field-meta.xml
<CustomField>
    <fullName>Document_Requested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Requested</label>
    <referenceTo>Document_Requested__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>