force-app/main/default/objects/ContentVersion/fields/Related__c.field-meta.xml
<CustomField>
    <fullName>Related__c</fullName>
    <formula>IF(ISBLANK(Document_Requested__r.Person_Account__c),&quot;General&quot;,Document_Requested__r.Person_Account__r.FirstName+&apos; &apos;+Document_Requested__r.Person_Account__r.MiddleName+&apos; &apos;+Document_Requested__r.Person_Account__r.LastName)</formula>
    <label>Related To</label>
    <type>Text</type>
</CustomField>