force-app/main/default/objects/ContentVersion/fields/Send_to_Lender__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Lender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Lender</label>
    <type>Checkbox</type>
</CustomField>